Added camera to the heli controller prefab and removed obj folder.

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ Assets/FMODStudioCache.asset
 Assets/FMOD/HiddenPassageway/Build/Desktop/PlatformX.bank.meta
 Assets/FMODStudioCache.asset
 Assets/FMODStudioCache.asset
+obj
