adding Assets/ProBuilder*Data/ProBuilderPreferences.asset.meta to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ ExportedObj/
 
 # Probuilder preferences
 Assets/ProBuilder*Data/ProBuilderPreferences.asset
+Assets/ProBuilder*Data/ProBuilderPreferences.asset.meta
 
 # Unity3D generated meta files
 *.pidb.meta
